--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,11 @@ jobs:
       with:
         dotnet-version: '6.x'
 
+    - name: install vs code
+      run: |
+        # Install necessary components for building ASP.NET projects
+        choco install visualstudio2019-workload-netweb --version=16.11.31829.152
+
     - name: restore dependencies
       run: dotnet restore
 
